fix(icon-button): specify height of icon to correct alignment
affects: @fremtind/jkl-icon-button

--- a/packages/icon-button/icon-button.scss
+++ b/packages/icon-button/icon-button.scss
@@ -1,4 +1,5 @@
 @import "~@fremtind/jkl-core/mixins/_helpers.scss";
+@import "~@fremtind/jkl-core/_functions.scss";
 
 .jkl-icon-button {
     @include reset-outline;
@@ -8,6 +9,7 @@
 
     &__icon {
         display: inline-block;
-        width: 1.25rem;
+        width: rem(20px);
+        height: rem(20px);
     }
 }
